--- a/Collapsible/Collapsible.csproj
+++ b/Collapsible/Collapsible.csproj
@@ -92,6 +92,39 @@
   <ItemGroup>
     <None Include="Resources\uparrowfw.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ajax-loader %289%29.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\270.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\285 %286%29.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\301 %281%29.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\294.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\294_1.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\294_2.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\301_28.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\301_32.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\301_64.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\301_128.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
